<resources>
    <string name="app_name">Suicide Ideation</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contact Therapist </string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_10_6_2019">10/6/2019</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_history">View History</string>
    <string name="menu_profile">View Profile</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_Therapistlist">Contact Therapist</string>

</resources>