<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.suicideideation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.suicideideation.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.suicideideation.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />


    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.suicideideation.ui.AboutFragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.suicideideation.ui.logout.LogoutFragment"
        android:label="@string/menu_logOut"
        tools:layout="@layout/fragment_logout" />

    <activity
        android:id="@+id/nav_therapyList"
        android:name="com.example.suicideideation.Therapistlist"
        android:label="Therapistlist"
        tools:layout="@layout/therapistlist"/>

  <!--  <activity
        android:id="@+id/nav_therapyList"
        android:name=".Therapistlist"
        android:label="@string/menu_logOut"
        tools:layout="@layout/fragment_logout" />-->
</navigation>